# mbta-covid-recovery-dash

./: .eslintrc.js  .gitignore  LICENSE  Makefile  Pipfile  README.md  data.json  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: data-update.yml
datagen/: .gitignore  config.py  generate.py  secret_values.example.py  secret_values.py
datagen/gtfs/: archive.py  loader.py  models.py  network.py  service_levels.py  time.py  trips.py  util.py
datagen/ridership/: process.py  source.py  test.py  timeseries.py
docs/: 404.html  CNAME  index.html
src/: colors.ts  time.ts  types.ts
src/components/: index.ts
src/components/CardFrame/: CardFrame.module.scss  CardFrame.tsx  index.ts
src/components/DataTable/: DataTable.module.scss  DataTable.tsx
src/components/LineCard/: LineCard.module.scss  LineCard.stories.tsx  LineCard.tsx  ServiceRidershipChart.tsx  TphChart.tsx  colors.ts  index.ts
src/components/LineGrid/: LineGrid.module.scss  LineGrid.tsx  index.ts  sorting.ts
src/components/RouteCard/: Metrics.tsx  RouteCard.module.scss  RouteCard.stories.tsx  RouteCard.tsx  ServiceRidershipChart.tsx  TphChart.tsx  index.ts  titles.ts
src/components/RouteGrid/: RouteGrid.module.scss  RouteGrid.tsx  index.ts  sorting.ts
src/components/SystemCard/: SystemCard.module.scss  SystemCard.tsx
src/components/TabPicker/: TabPicker.module.scss  TabPicker.tsx  index.ts
src/components/TopLine/: Component.stories.tsx  Component.tsx  TopLine.module.scss  TopLine.stories.tsx  TopLine.tsx  TopLineChart.module.scss  TopLineChart.stories.tsx  TopLineChart.tsx  index.ts
src/components/TopLineMobile/: TopLineMobile.module.scss  TopLineMobile.tsx  (+2 more)
src/pages/: index.tsx
src/storydata/: lineData.ts  routeData.ts  summaryLineData.ts  timeSeries.ts  tripsPerHour.ts
src/styles/: base.scss
(+1625 files in other folders)
